--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -44,7 +44,7 @@
         <!-- footer -->
         <!-- ============================================================== -->
         <footer class="footer">
-            © 2020 Admin Pro by DAMMDK.xyz
+            © {{ year }} Admin Pro by DAMMDK.xyz
         </footer>
         <!-- ============================================================== -->
         <!-- End footer -->
