--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,26 @@
-<p>grafica1 works!</p>
+<!-- ============================================================== -->
+<!-- Start Page Content -->
+<!-- ============================================================== -->
+<div class="row">
+    <div class="col-6">
+        <app-dona title="ventas"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona title="Cambios"
+                  [labels]="labels1"
+                  [data]="data1"
+        ></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona title="Compras"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona title="Algo"></app-dona>
+    </div>
+</div>
+<!-- ============================================================== -->
+<!-- End PAge Content -->
+<!-- ============================================================== -->
